--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/eslint": "^8.56.7",
 		"@types/node": "^20.14.2",
+		"@types/nodemailer": "^6.4.15",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"nodemailer": "^6.9.13",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
